--- a/data/vanillaChance.properties
+++ b/data/vanillaChance.properties
@@ -1,9 +1,9 @@
 card1=Advance to "Go". Collect $200.
 card2=Advance to Illinois Ave. If you pass Go, collect $200.
 card3=Advance to St. Charles Place. If you pass Go, collect $200.
-card4=Advance token to nearest Utility. If unowned, you may buy it from the Bank. If owned, throw dice and pay owner a total 10 times the amount thrown.
-card5=Advance token to the nearest Railroad and pay owner twice the rental to which he/she is otherwise entitled. If Railroad is unowned, you may buy it from the Bank.
-card6=Bank pays you dividend of $50.
+card4=Advance token to nearest Utility. If unowned, you may buy it from the Engine.Bank. If owned, throw dice and pay owner a total 10 times the amount thrown.
+card5=Advance token to the nearest Railroad and pay owner twice the rental to which he/she is otherwise entitled. If Railroad is unowned, you may buy it from the Engine.Bank.
+card6=Engine.Bank pays you dividend of $50.
 card7=Get out of Jail Free. This card may be kept until needed, or traded/sold.
 card8=Go Back Three (3) Spaces.
 card9=Go to Jail. Go directly to Jail. Do not pass GO, do not collect $200.
@@ -11,7 +11,7 @@ card10=Make general repairs on all your property: For each house pay $25, For ea
 card11=Pay poor tax of $15
 card12=Take a trip to Reading Railroad.
 card13=Take a walk on the Boardwalk. Advance token to Boardwalk.
-card14=You have been elected Chairman of the Board. Pay each player $50.
+card14=You have been elected Chairman of the Engine.Board. Pay each player $50.
 card15=Your building {and} loan matures. Collect $150.
 card16=You have won a crossword competition. Collect $100.
-card17=Advance token to the nearest Railroad and pay owner twice the rental to which he/she is otherwise entitled. If Railroad is unowned, you may buy it from the Bank.
+card17=Advance token to the nearest Railroad and pay owner twice the rental to which he/she is otherwise entitled. If Railroad is unowned, you may buy it from the Engine.Bank.
