added stuff to data files

--- a/data/vanilla.properties
+++ b/data/vanilla.properties
@@ -2,3 +2,4 @@ propertiesFile=vanillaProperties
 chanceCards=vanillaChance
 communityCards=vanillaChest
 piecesList=vanillaPieces
+rules=vanillaRules
