--- a/data/vanillaChest.properties
+++ b/data/vanillaChest.properties
@@ -1,5 +1,5 @@
 card1=Advance to "Go". Collect $200
-card2=Engine.Bank error in your favor. Collect $200.
+card2=app.controller.Engine.Bank error in your favor. Collect $200.
 card3=Doctor's fees. Pay $50.
 card4=From sale of stock you get $50.
 card5=Get Out of Jail Free. This card may be kept until needed or sold/traded.
