pulling from master

--- a/data/vanillaSpaces.properties
+++ b/data/vanillaSpaces.properties
@@ -1,5 +1,8 @@
-prop1=Mediterranean Avenue
-prop2=Baltic Avenue
+prop1=Mediterranean Avenue,C
+
+prop99=Income Tax,Money,-200
+
+prop2=Baltic Avenue,C
 
 prop3=Oriental Avenue
 prop4=Vermont Avenue
