--- a/data/sampleGameSetup.properties
+++ b/data/sampleGameSetup.properties
@@ -1,9 +1,6 @@
-player1="Jaiveer"
-piece1="car.png"
-player2="Rohan"
-piece2="dog.png"
-player3="Will"
-piece3="hat.png"
+player1=Jaiveer,car.png
+player2=Rohan,dog.png
+player3=Will,hat.png
 
-prop_file="vanilla"
-rules_file="vanillaRules"
+prop_file=vanilla
+rules_file=vanillaRules
