Modified bundles to account for new hierarchy

--- a/data/Vanilla/vanillaSpaces.properties
+++ b/data/Vanilla/vanillaSpaces.properties
@@ -13,41 +13,41 @@ space9=Connecticut Avenue,CP,vanilla_ConnecticutAvenue
 
 space10=In Jail,MON,vanilla_InJail
 
-space11=St. Charles Place,CP,vanilla_StCharlesPlace
-space12=Electric Company,U,vanilla_ElectricCompany
-space13=States Avenue,CP,vanilla_StatesAvenue
-space14=Virginia Avenue,CP,vanilla_VirginiaAvenue
+space11=St. Charles Place,CP,Vanilla/Spaces/vanilla_StCharlesPlace
+space12=Electric Company,U,Vanilla/Spaces/vanilla_ElectricCompany
+space13=States Avenue,CP,Vanilla/Spaces/vanilla_StatesAvenue
+space14=Virginia Avenue,CP,Vanilla/Spaces/vanilla_VirginiaAvenue
 
-space15=Pennsylvania Railroad,RR,vanilla_PennsylvaniaRailroad
-space16=St. James Place,CP,vanilla_StJamesPlace
+space15=Pennsylvania Railroad,RR,Vanilla/Spaces/vanilla_PennsylvaniaRailroad
+space16=St. James Place,CP,Vanilla/Spaces/vanilla_StJamesPlace
 space17=Community Chest,CC
-space18=Tennessee Avenue,CP,vanilla_TennesseeAvenue
-space19=New York Avenue,CP,vanilla_NewYorkAvenue
+space18=Tennessee Avenue,CP,Vanilla/Spaces/vanilla_TennesseeAvenue
+space19=New York Avenue,CP,Vanilla/Spaces/vanilla_NewYorkAvenue
 
-space20= Free Parking,MON,vanilla_FreeParking
+space20= Free Parking,MON,Vanilla/Spaces/vanilla_FreeParking
 
-space21=Kentucky Avenue,CP,vanilla_KentuckyAvenue
+space21=Kentucky Avenue,CP,Vanilla/Spaces/vanilla_KentuckyAvenue
 space22=Chance,CH
-space23=Indiana Avenue,CP,vanilla_IndianaAvenue
-space24=Illinois Avenue,CP,vanilla_IllinoisAvenue
+space23=Indiana Avenue,CP,Vanilla/Spaces/vanilla_IndianaAvenue
+space24=Illinois Avenue,CP,Vanilla/Spaces/vanilla_IllinoisAvenue
 
-space25=B&O Railroad,RR,vanilla_BORailroad
+space25=B&O Railroad,RR,Vanilla/Spaces/vanilla_BORailroad
 
-space26=Atlantic Avenue,CP,vanilla_AtlanticAvenue
-space27=Ventnor Avenue,CP,vanilla_VentnorAvenue
-space28=Water Works,U,vanilla_WaterWorks
-space29=Marvin Gardens,CP,vanilla_MarvinGardens
+space26=Atlantic Avenue,CP,Vanilla/Spaces/vanilla_AtlanticAvenue
+space27=Ventnor Avenue,CP,Vanilla/Spaces/vanilla_VentnorAvenue
+space28=Water Works,U,Vanilla/Spaces/vanilla_WaterWorks
+space29=Marvin Gardens,CP,Vanilla/Spaces/vanilla_MarvinGardens
 
-space30=Go to Jail,MOV,vanilla_GoToJail
+space30=Go to Jail,MOV,Vanilla/Spaces/vanilla_GoToJail
 
-space31=Pacific Avenue,CP,vanilla_PacificAvenue
-space32=North Carolina Avenue,CP,vanilla_NorthCarolinaAvenue
+space31=Pacific Avenue,CP,Vanilla/Spaces/vanilla_PacificAvenue
+space32=North Carolina Avenue,CP,Vanilla/Spaces/vanilla_NorthCarolinaAvenue
 space33=Community Chest,CC
-space34=Pennsylvania Avenue,CP,vanilla_PennsylvaniaAvenue
+space34=Pennsylvania Avenue,CP,Vanilla/Spaces/vanilla_PennsylvaniaAvenue
 
-space35=Short Line,RR,vanilla_ShortLine
+space35=Short Line,RR,Vanilla/Spaces/vanilla_ShortLine
 
 space36=Chance,CH
-space37=Park Place,CP,vanilla_ParkPlace
-space38=Super Tax,MON,vanilla_SuperTax
-space39=Boardwalk,CP,vanilla_Boardwalk
+space37=Park Place,CP,Vanilla/Spaces/vanilla_ParkPlace
+space38=Super Tax,MON,Vanilla/Spaces/vanilla_SuperTax
+space39=Boardwalk,CP,Vanilla/Spaces/vanilla_Boardwalk
