changed setup file and mode file, pulling changes to spaces files

--- a/data/sampleGameSetup.properties
+++ b/data/sampleGameSetup.properties
@@ -2,5 +2,5 @@ player1=Jaiveer,car.png
 player2=Rohan,dog.png
 player3=Will,hat.png
 
-prop_file=vanilla
-rules_file=vanillaRules
+prop_file=Vanilla/vanilla
+rules_file=Vanilla/vanillaRules
