fixed bugs with setup - invalid properties file, player names out of order, spaces out of order

--- a/data/Vanilla/vanillaSpaces.properties
+++ b/data/Vanilla/vanillaSpaces.properties
@@ -1,17 +1,17 @@
-space0=Go,MON,vanilla_Go
-space1=Mediterranean Avenue,CP,vanilla_MediterraneanAve
+space0=Go,MON,Vanilla/Spaces/vanilla_Go
+space1=Mediterranean Avenue,CP,Vanilla/Spaces/vanilla_MediterraneanAve
 space2=Community Chest,CC
-space3=Baltic Avenue,CP,vanilla_BalticAvenue
-space4=Income Tax,MON,vanilla_IncomeTax
+space3=Baltic Avenue,CP,Vanilla/Spaces/vanilla_BalticAvenue
+space4=Income Tax,MON,Vanilla/Spaces/vanilla_IncomeTax
 
-space5=Reading Railroad,RR,vanilla_ReadingRailroad
+space5=Reading Railroad,RR,Vanilla/Spaces/vanilla_ReadingRailroad
 
-space6=Oriental Avenue,CP,vanilla_OrientalAvenue
+space6=Oriental Avenue,CP,Vanilla/Spaces/vanilla_OrientalAvenue
 space7=Chance,CH
-space8=Vermont Avenue,CP,vanilla_VermontAvenue
-space9=Connecticut Avenue,CP,vanilla_ConnecticutAvenue
+space8=Vermont Avenue,CP,Vanilla/Spaces/vanilla_VermontAvenue
+space9=Connecticut Avenue,CP,Vanilla/Spaces/vanilla_ConnecticutAvenue
 
-space10=In Jail,MON,vanilla_InJail
+space10=In Jail,MON,Vanilla/Spaces/vanilla_InJail
 
 space11=St. Charles Place,CP,Vanilla/Spaces/vanilla_StCharlesPlace
 space12=Electric Company,U,Vanilla/Spaces/vanilla_ElectricCompany
