--- a/data/sampleGameSetup.properties
+++ b/data/sampleGameSetup.properties
@@ -1,6 +1,9 @@
-player1=Jaiveer,car.png
-player2=Rohan,dog.png
-player3=Will,hat.png
+player1=Jaiveer,Vanilla/Pieces/car.png
+player2=Rohan,Vanilla/Pieces/dog.png
+player3=Will,Vanilla/Pieces/hat.png
+player4=Jaylyn,Vanilla/Pieces/ship.png
+player5=Ed,Vanilla/Pieces/iron.png
+player6=Jacob,Vanilla/Pieces/shoe.png
 
 prop_file=Vanilla/vanilla
 rules_file=Vanilla/vanillaRules
