--- a/gamedata/Vanilla/Game1.properties
+++ b/gamedata/Vanilla/Game1.properties
@@ -1,10 +1,10 @@
-player0=a,dog
-player1=b,car
-player2=c,hat
-player3=d,iron
-player4=e,ship
-player5=f,shoe
-player6=g,thimble
-player7=h,wheelbarrow
+player0=jaiveer,car
+player1=ed,dog
+player2=,null
+player3=,null
+player4=,null
+player5=,null
+player6=,null
+player7=,null
 prop_file=Vanilla/vanilla
 rules_file=Vanilla/vanillaRules
