added name to constructor for common space (which will eventually be reconfigured), gave names to common space properties files

--- a/data/Vanilla/vanillaSpaces.properties
+++ b/data/Vanilla/vanillaSpaces.properties
@@ -1,13 +1,13 @@
 space0=Go,MON,Vanilla/Spaces/vanilla_Go
 space1=Mediterranean Avenue,CP,Vanilla/Spaces/vanilla_MediterraneanAve
-space2=Community Chest,CC
+space2=Community Chest,CC,Vanilla/Spaces/vanilla_CommunityChest
 space3=Baltic Avenue,CP,Vanilla/Spaces/vanilla_BalticAvenue
 space4=Income Tax,MON,Vanilla/Spaces/vanilla_IncomeTax
 
 space5=Reading Railroad,RR,Vanilla/Spaces/vanilla_ReadingRailroad
 
 space6=Oriental Avenue,CP,Vanilla/Spaces/vanilla_OrientalAvenue
-space7=Chance,CH
+space7=Chance,CH,Vanilla/Spaces/vanilla_Chance
 space8=Vermont Avenue,CP,Vanilla/Spaces/vanilla_VermontAvenue
 space9=Connecticut Avenue,CP,Vanilla/Spaces/vanilla_ConnecticutAvenue
 
@@ -20,14 +20,14 @@ space14=Virginia Avenue,CP,Vanilla/Spaces/vanilla_VirginiaAvenue
 
 space15=Pennsylvania Railroad,RR,Vanilla/Spaces/vanilla_PennsylvaniaRailroad
 space16=St. James Place,CP,Vanilla/Spaces/vanilla_StJamesPlace
-space17=Community Chest,CC
+space17=Community Chest,CC,Vanilla/Spaces/vanilla_CommunityChest
 space18=Tennessee Avenue,CP,Vanilla/Spaces/vanilla_TennesseeAvenue
 space19=New York Avenue,CP,Vanilla/Spaces/vanilla_NewYorkAvenue
 
 space20= Free Parking,MON,Vanilla/Spaces/vanilla_FreeParking
 
 space21=Kentucky Avenue,CP,Vanilla/Spaces/vanilla_KentuckyAvenue
-space22=Chance,CH
+space22=Chance,CH,Vanilla/Spaces/vanilla_Chance
 space23=Indiana Avenue,CP,Vanilla/Spaces/vanilla_IndianaAvenue
 space24=Illinois Avenue,CP,Vanilla/Spaces/vanilla_IllinoisAvenue
 
@@ -42,12 +42,12 @@ space30=Go to Jail,MOV,Vanilla/Spaces/vanilla_GoToJail
 
 space31=Pacific Avenue,CP,Vanilla/Spaces/vanilla_PacificAvenue
 space32=North Carolina Avenue,CP,Vanilla/Spaces/vanilla_NorthCarolinaAvenue
-space33=Community Chest,CC
+space33=Community Chest,CC,Vanilla/Spaces/vanilla_CommunityChest
 space34=Pennsylvania Avenue,CP,Vanilla/Spaces/vanilla_PennsylvaniaAvenue
 
 space35=Short Line,RR,Vanilla/Spaces/vanilla_ShortLine
 
-space36=Chance,CH
+space36=Chance,CH,Vanilla/Spaces/vanilla_Chance
 space37=Park Place,CP,Vanilla/Spaces/vanilla_ParkPlace
 space38=Super Tax,MON,Vanilla/Spaces/vanilla_SuperTax
 space39=Boardwalk,CP,Vanilla/Spaces/vanilla_Boardwalk
