no longer using getPropertyName()

--- a/gamedata/Vanilla/Game1.properties
+++ b/gamedata/Vanilla/Game1.properties
@@ -1,6 +1,6 @@
-player0=ad,null
-player1=,null
-player2=,null
+player0=a,car
+player1=b,dog
+player2=c,hat
 player3=,null
 player4=,null
 player5=,null
