added color to prop files and to Color properties... did this in master as it was a slightly urgent change necessary for view to progress...

--- a/data/Vanilla/Spaces/vanilla_NewYorkAvenue.properties
+++ b/data/Vanilla/Spaces/vanilla_NewYorkAvenue.properties
@@ -4,4 +4,5 @@ rents=16,80,220,600,800,1000
 housePrice=100
 hotelPrice=100
 mortgage=100
-family=Tennessee Avenue,St. James Place 
+family=Tennessee Avenue,St. James Place
+color=orange
