--- a/data/Vanilla/Spaces/vanilla_StJamesPlace.properties
+++ b/data/Vanilla/Spaces/vanilla_StJamesPlace.properties
@@ -4,4 +4,5 @@ rents=14,70,200,550,750,950
 housePrice=100
 hotelPrice=100
 mortgage=90
-family=Tennessee Avenue,New York Avenue 
+family=Tennessee Avenue,New York Avenue
+color=orange
