worked through issues on community chest and chance properties file (splitting), made tests for money card, added tests for parsing cards in gameSetupTest too

--- a/data/Vanilla/vanillaChest.properties
+++ b/data/Vanilla/vanillaChest.properties
@@ -1,16 +1,16 @@
-card1=Advance to "Go". Collect $200,MON,+200
-card2=Bank error in your favor. Collect $200.,MON,+200
-card3=Doctor's fees. Pay $50.,MON,-200
-card4=From sale of stock you get $50.,MON,50
-card5=Get Out of Jail Free. This card may be kept until needed or sold/traded.,HOLD
-card6=Go to Jail. Go directly to jail. Do not pass Go, Do not collect $200.,MOV,Go To Jail
-card7=Grand Opera Night. Collect $50 for opening night seats.,MON,+50
-card8=Holiday Fund matures. Collect $100.,MON,+100
-card9=Income tax refund. Collect $20.,MON,+20
-card10=It's your birthday. Collect $10.,MON,+10
-card11=Life insurance matures – Collect $100,MON,+100
-card12=Hospital Fees. Pay $50.,MON,-50
-card13=Pay school fees of $150.,MON,-150
-card14=Receive $25 consultancy fee.,MON,+25
-card15=You have won second prize in a beauty contest. Collect $10.,MON,+10
-card16=You inherit $100.,MON,+100
+card1=Advance to "Go". Collect $200>MOV>Go
+card2=Bank error in your favor. Collect $200.>MON>+200
+card3=Doctor's fees. Pay $50.>MON>-50
+card4=From sale of stock you get $50.>MON>+50
+card5=Get Out of Jail Free. This card may be kept until needed or sold/traded.>HOLD
+card6=Go to Jail. Go directly to jail. Do not pass Go. Do not collect $200.>MOV>Go To Jail
+card7=Grand Opera Night. Collect $50 for opening night seats.>MON>+50
+card8=Holiday Fund matures. Collect $100.>MON>+100
+card9=Income tax refund. Collect $20.>MON>+20
+card10=It's your birthday. Collect $10.>MON>+10
+card11=Life insurance matures – Collect $100>MON>+100
+card12=Hospital Fees. Pay $50.>MON>-50
+card13=Pay school fees of $150.>MON>-150
+card14=Receive $25 consultancy fee.>MON>+25
+card15=You have won second prize in a beauty contest. Collect $10.>MON>+10
+card16=You inherit $100.>MON>+100
