chance and community card now using leaveJail function, configured HoldableCard to accept zero arguments as well

--- a/data/Vanilla/vanillaChance.properties
+++ b/data/Vanilla/vanillaChance.properties
@@ -4,7 +4,7 @@ card3=Advance to St. Charles Place. If you pass Go, collect $200.>MOV>St. Charle
 card4=Advance token to Water Works. If unowned, you may buy it from the Bank. If owned, pay owner rent.>MOV>Water Works
 card5=Advance token to B. & 0. Railroad and pay owner rent. If Railroad is unowned, you may buy it from the Bank.>MOV>B. & 0. Railroad
 card6=Bank pays you dividend of $50.>MON>+50
-card7=Get out of Jail Free. This card may be kept until needed, or traded/sold.>HOLD>setIsInJail>boolean>false
+card7=Get out of Jail Free. This card may be kept until needed, or traded/sold.>HOLD>leaveJail
 card8=Go Back Three (3) Spaces.>MOVN>-3
 card9=Go to Jail. Go directly to Jail. Do not pass GO, do not collect $200.>MOV>Go To Jail
 card10=Pay poor tax of $15>MON>-15
