--- a/data/Vanilla/vanillaChest.properties
+++ b/data/Vanilla/vanillaChest.properties
@@ -2,7 +2,7 @@ card1=Advance to "Go". Collect $200>MOV>Go
 card2=Bank error in your favor. Collect $200.>MON>+200
 card3=Doctor's fees. Pay $50.>MON>-50
 card4=From sale of stock you get $50.>MON>+50
-card5=Get Out of Jail Free. This card may be kept until needed or sold/traded.>HOLD>setIsInJail>boolean>false
+card5=Get Out of Jail Free. This card may be kept until needed or sold/traded.>HOLD>leaveJail
 card6=Go to Jail. Go directly to jail. Do not pass Go. Do not collect $200.>MOV>Go To Jail
 card7=Grand Opera Night. Collect $50 for opening night seats.>MON>+50
 card8=Holiday Fund matures. Collect $100.>MON>+100
