--- a/data/Vanilla/vanillaPieces.properties
+++ b/data/Vanilla/vanillaPieces.properties
@@ -1,8 +1,8 @@
-piece1=car.png
-piece2=dog.png
-piece3=hat.png
-piece4=iron.png
-piece5=ship.png
-piece6=shoe.png
-piece7=thimble.png
-piece8=wheelbarrow.png
+piece1=Vanilla/Pieces/car.png
+piece2=Vanilla/Pieces/dog.png
+piece3=Vanilla/Pieces/hat.png
+piece4=Vanilla/Pieces/iron.png
+piece5=Vanilla/Pieces/ship.png
+piece6=Vanilla/Pieces/shoe.png
+piece7=Vanilla/Pieces/thimble.png
+piece8=Vanilla/Pieces/wheelbarrow.png
