changed player read-in to be not hardcoded

--- a/gamedata/Vanilla/Game1.properties
+++ b/gamedata/Vanilla/Game1.properties
@@ -1,10 +1,4 @@
-player0=adadasd,null
-player1=,null
-player2=,null
-player3=,null
-player4=,null
-player5=,null
-player6=,null
-player7=,null
+player0=pjo',dog
+player1=u0io;,dog
 prop_file=Vanilla/vanilla
 rules_file=Vanilla/vanillaRules
