--- a/gamedata/Vanilla/Game1.properties
+++ b/gamedata/Vanilla/Game1.properties
@@ -1,10 +1,3 @@
-player0=123,null
-player1=,null
-player2=,null
-player3=,null
-player4=,null
-player5=,null
-player6=,null
-player7=,null
+player0=sd,null
 prop_file=Vanilla/vanilla
 rules_file=Vanilla/vanillaRules
