--- a/gamedata/Vanilla/Game1.properties
+++ b/gamedata/Vanilla/Game1.properties
@@ -1,9 +1,3 @@
-<<<<<<< HEAD
-player0=Rohan,car
-player1=Ed,dog
-=======
-player0=a,car
-player1=b,dog
->>>>>>> ffd49536cfd3af67171cb61639e3a3bc98c515f3
+player0=sdf,dog
 prop_file=Vanilla/vanilla
 rules_file=Vanilla/vanillaRules
