--- a/gamedata/Vanilla/Game1.properties
+++ b/gamedata/Vanilla/Game1.properties
@@ -1,4 +1,4 @@
-player0=adsf,car
-player1=aaa,dog
+player0=jaiveer,car
+player1=will,dog
 prop_file=Vanilla/vanilla
 rules_file=Vanilla/vanillaRules
