fixed bug with 'passing go' when sent to jail

--- a/gamedata/Vanilla/Game1.properties
+++ b/gamedata/Vanilla/Game1.properties
@@ -1,4 +1,4 @@
-player0=jaiveer,car
-player1=will,dog
+player0=Will,car
+player1=jaiveer,dog
 prop_file=Vanilla/vanilla
 rules_file=Vanilla/vanillaRules
