created RulesInitializer Class

--- a/data/boardValues.properties
+++ b/data/boardValues.properties
@@ -3,7 +3,9 @@ GetOutOfJailFee=50.0
 MaxTurnsInJail=3
 
 GoMoney=200.0
+GoIndex = 0
+JailIndex = 10
 
 SaleToBankMultiplier=.5
 UnmortgageMultiplier=1.1
-HoadableCardSaleValue=30.0
+HoldableCardSaleValue=30.0
