added space photos

--- a/gamedata/Vanilla/Game1.properties
+++ b/gamedata/Vanilla/Game1.properties
@@ -1,4 +1,4 @@
-player0=jaylyn,car
-player1=jaiveer,dog
+player0=ian,car
+player1=jaylyn,dog
 prop_file=Vanilla/vanilla
 rules_file=Vanilla/vanillaRules
