--- a/data/Vanilla/Spaces/vanilla_ReadingRailroad.properties
+++ b/data/Vanilla/Spaces/vanilla_ReadingRailroad.properties
@@ -1,4 +1,4 @@
-name=Reading Railroad
+name=Reading Railroad,Vanilla/Space-Photos/railroad-space.png
 salePrice=200
 mortgage=100
 rents=25,50,100,200
