using reflection to read in spaces now

--- a/data/Vanilla/vanillaSpaces.properties
+++ b/data/Vanilla/vanillaSpaces.properties
@@ -1,53 +1,53 @@
-space0=Go,MON,Vanilla/Spaces/vanilla_Go
-space1=Mediterranean Avenue,CP,Vanilla/Spaces/vanilla_MediterraneanAve
-space2=Community Chest,CC,Vanilla/Spaces/vanilla_CommunityChest
-space3=Baltic Avenue,CP,Vanilla/Spaces/vanilla_BalticAvenue
-space4=Income Tax,MON,Vanilla/Spaces/vanilla_IncomeTax
+space0=Go,makeMoney,Vanilla/Spaces/vanilla_Go
+space1=Mediterranean Avenue,makeCP,Vanilla/Spaces/vanilla_MediterraneanAve
+space2=Community Chest,makeCardSpace,Vanilla/Spaces/vanilla_CommunityChest
+space3=Baltic Avenue,makeCP,Vanilla/Spaces/vanilla_BalticAvenue
+space4=Income Tax,makeMoney,Vanilla/Spaces/vanilla_IncomeTax
 
-space5=Reading Railroad,RR,Vanilla/Spaces/vanilla_ReadingRailroad
+space5=Reading Railroad,makeRR,Vanilla/Spaces/vanilla_ReadingRailroad
 
-space6=Oriental Avenue,CP,Vanilla/Spaces/vanilla_OrientalAvenue
-space7=Chance,CH,Vanilla/Spaces/vanilla_Chance
-space8=Vermont Avenue,CP,Vanilla/Spaces/vanilla_VermontAvenue
-space9=Connecticut Avenue,CP,Vanilla/Spaces/vanilla_ConnecticutAvenue
+space6=Oriental Avenue,makeCP,Vanilla/Spaces/vanilla_OrientalAvenue
+space7=Chance,makeCardSpace,Vanilla/Spaces/vanilla_Chance
+space8=Vermont Avenue,makeCP,Vanilla/Spaces/vanilla_VermontAvenue
+space9=Connecticut Avenue,makeCP,Vanilla/Spaces/vanilla_ConnecticutAvenue
 
-space10=In Jail,MON,Vanilla/Spaces/vanilla_InJail
+space10=In Jail,makeMoney,Vanilla/Spaces/vanilla_InJail
 
-space11=St. Charles Place,CP,Vanilla/Spaces/vanilla_StCharlesPlace
-space12=Electric Company,U,Vanilla/Spaces/vanilla_ElectricCompany
-space13=States Avenue,CP,Vanilla/Spaces/vanilla_StatesAvenue
-space14=Virginia Avenue,CP,Vanilla/Spaces/vanilla_VirginiaAvenue
+space11=St. Charles Place,makeCP,Vanilla/Spaces/vanilla_StCharlesPlace
+space12=Electric Company,makeUtility,Vanilla/Spaces/vanilla_ElectricCompany
+space13=States Avenue,makeCP,Vanilla/Spaces/vanilla_StatesAvenue
+space14=Virginia Avenue,makeCP,Vanilla/Spaces/vanilla_VirginiaAvenue
 
-space15=Pennsylvania Railroad,RR,Vanilla/Spaces/vanilla_PennsylvaniaRailroad
-space16=St. James Place,CP,Vanilla/Spaces/vanilla_StJamesPlace
-space17=Community Chest,CC,Vanilla/Spaces/vanilla_CommunityChest
-space18=Tennessee Avenue,CP,Vanilla/Spaces/vanilla_TennesseeAvenue
-space19=New York Avenue,CP,Vanilla/Spaces/vanilla_NewYorkAvenue
+space15=Pennsylvania Railroad,makeRR,Vanilla/Spaces/vanilla_PennsylvaniaRailroad
+space16=St. James Place,makeCP,Vanilla/Spaces/vanilla_StJamesPlace
+space17=Community Chest,makeCardSpace,Vanilla/Spaces/vanilla_CommunityChest
+space18=Tennessee Avenue,makeCP,Vanilla/Spaces/vanilla_TennesseeAvenue
+space19=New York Avenue,makeCP,Vanilla/Spaces/vanilla_NewYorkAvenue
 
-space20= Free Parking,MON,Vanilla/Spaces/vanilla_FreeParking
+space20= Free Parking,makeMoney,Vanilla/Spaces/vanilla_FreeParking
 
-space21=Kentucky Avenue,CP,Vanilla/Spaces/vanilla_KentuckyAvenue
-space22=Chance,CH,Vanilla/Spaces/vanilla_Chance
-space23=Indiana Avenue,CP,Vanilla/Spaces/vanilla_IndianaAvenue
-space24=Illinois Avenue,CP,Vanilla/Spaces/vanilla_IllinoisAvenue
+space21=Kentucky Avenue,makeCP,Vanilla/Spaces/vanilla_KentuckyAvenue
+space22=Chance,makeCardSpace,Vanilla/Spaces/vanilla_Chance
+space23=Indiana Avenue,makeCP,Vanilla/Spaces/vanilla_IndianaAvenue
+space24=Illinois Avenue,makeCP,Vanilla/Spaces/vanilla_IllinoisAvenue
 
-space25=B&O Railroad,RR,Vanilla/Spaces/vanilla_BORailroad
+space25=B&O Railroad,makeRR,Vanilla/Spaces/vanilla_BORailroad
 
-space26=Atlantic Avenue,CP,Vanilla/Spaces/vanilla_AtlanticAvenue
-space27=Ventnor Avenue,CP,Vanilla/Spaces/vanilla_VentnorAvenue
-space28=Water Works,U,Vanilla/Spaces/vanilla_WaterWorks
-space29=Marvin Gardens,CP,Vanilla/Spaces/vanilla_MarvinGardens
+space26=Atlantic Avenue,makeCP,Vanilla/Spaces/vanilla_AtlanticAvenue
+space27=Ventnor Avenue,makeCP,Vanilla/Spaces/vanilla_VentnorAvenue
+space28=Water Works,makeUtility,Vanilla/Spaces/vanilla_WaterWorks
+space29=Marvin Gardens,makeCP,Vanilla/Spaces/vanilla_MarvinGardens
 
-space30=Go to Jail,MOV,Vanilla/Spaces/vanilla_GoToJail
+space30=Go to Jail,makeMoveSpace,Vanilla/Spaces/vanilla_GoToJail
 
-space31=Pacific Avenue,CP,Vanilla/Spaces/vanilla_PacificAvenue
-space32=North Carolina Avenue,CP,Vanilla/Spaces/vanilla_NorthCarolinaAvenue
-space33=Community Chest,CC,Vanilla/Spaces/vanilla_CommunityChest
-space34=Pennsylvania Avenue,CP,Vanilla/Spaces/vanilla_PennsylvaniaAvenue
+space31=Pacific Avenue,makeCP,Vanilla/Spaces/vanilla_PacificAvenue
+space32=North Carolina Avenue,makeCP,Vanilla/Spaces/vanilla_NorthCarolinaAvenue
+space33=Community Chest,makeCardSpace,Vanilla/Spaces/vanilla_CommunityChest
+space34=Pennsylvania Avenue,makeCP,Vanilla/Spaces/vanilla_PennsylvaniaAvenue
 
-space35=Short Line,RR,Vanilla/Spaces/vanilla_ShortLine
+space35=Short Line,makeRR,Vanilla/Spaces/vanilla_ShortLine
 
-space36=Chance,CH,Vanilla/Spaces/vanilla_Chance
-space37=Park Place,CP,Vanilla/Spaces/vanilla_ParkPlace
-space38=Super Tax,MON,Vanilla/Spaces/vanilla_SuperTax
-space39=Boardwalk,CP,Vanilla/Spaces/vanilla_Boardwalk
+space36=Chance,makeCardSpace,Vanilla/Spaces/vanilla_Chance
+space37=Park Place,makeCP,Vanilla/Spaces/vanilla_ParkPlace
+space38=Super Tax,makeMoney,Vanilla/Spaces/vanilla_SuperTax
+space39=Boardwalk,makeCP,Vanilla/Spaces/vanilla_Boardwalk
