added reflection to duke monopoloy spaces file

--- a/data/Dukeopoly/dukeopolySpaces.properties
+++ b/data/Dukeopoly/dukeopolySpaces.properties
@@ -1,53 +1,53 @@
-space0=Duke Unversity,MON,Dukeopoly/Spaces/dukeopoly_dukeUniversity
-space1=Wannamaker Hall,CP,Dukeopoly/Spaces/dukeopoly_wannamakerHall
-space2=Campus Mail,CC,Dukeopoly/Spaces/dukeopoly_mail
-space3=Few Quad,CP,Dukeopoly/Spaces/dukeopoly_fewQuad
+space0=Duke Unversity,makeMoney,Dukeopoly/Spaces/dukeopoly_dukeUniversity
+space1=Wannamaker Hall,makeCP,Dukeopoly/Spaces/dukeopoly_wannamakerHall
+space2=Campus Mail,makeCardSpace,Dukeopoly/Spaces/dukeopoly_mail
+space3=Few Quad,makeCP,Dukeopoly/Spaces/dukeopoly_fewQuad
 
-space4=Increased Tuition,MON,Dukeopoly/Spaces/dukeopoly_increasedTuition
-space5=Central Campus,RR,Dukeopoly/Spaces/dukeopoly_centralCampus
+space4=Increased Tuition,makeMoney,Dukeopoly/Spaces/dukeopoly_increasedTuition
+space5=Central Campus,makeRR,Dukeopoly/Spaces/dukeopoly_centralCampus
 
-space6=The Gardens,CP,Dukeopoly/Spaces/dukeopoly_theGardens
-space7=Contingency,CH,Dukeopoly/Spaces/dukeopoly_contingecy
-space8=Central Campus Pool,CP,Dukeopoly/Spaces/dukeopoly_centralCampusPool
-space9=The Lemur Center,CP,Dukeopoly/Spaces/dukeopoly_theLemurCenter
+space6=The Gardens,makeCP,Dukeopoly/Spaces/dukeopoly_theGardens
+space7=Contingency,makeCardSpace,Dukeopoly/Spaces/dukeopoly_contingecy
+space8=Central Campus Pool,makeCP,Dukeopoly/Spaces/dukeopoly_centralCampusPool
+space9=The Lemur Center,makeCP,Dukeopoly/Spaces/dukeopoly_theLemurCenter
 
-space10=Home,MON,Dukeopoly/Spaces/dukeopoly_home
+space10=Home,makeMoney,Dukeopoly/Spaces/dukeopoly_home
 
-space11=West Union,CP,Dukeopoly/Spaces/dukeopoly_westUnion
-space12=Soroity Rush,U,Dukeopoly/Spaces/dukeopoly_soroityRush
-space13=Uncle Harry's,CP,Dukeopoly/Spaces/dukeopoly_uncleHarrys
-space14=The Loop,CP,Dukeopoly/Spaces/dukeopoly_theLoop
+space11=West Union,makeCP,Dukeopoly/Spaces/dukeopoly_westUnion
+space12=Soroity Rush,makeUtility,Dukeopoly/Spaces/dukeopoly_soroityRush
+space13=Uncle Harry's,makeCP,Dukeopoly/Spaces/dukeopoly_uncleHarrys
+space14=The Loop,makeCP,Dukeopoly/Spaces/dukeopoly_theLoop
 
-space15=West Campus,RR,Dukeopoly/Spaces/dukeopoly_westCampus
-space16=Duke Forest,CP,Dukeopoly/Spaces/dukeopoly_dukeForest
-space17=Campus Mail,CC,Dukeopoly/Spaces/dukeopoly_mail
-space18=Marketplace,CP,Dukeopoly/Spaces/dukeopoly_marketplace
-space19=Biddle Music Building,CP,Dukeopoly/Spaces/dukeopoly_biddleMusicBuilding
+space15=West Campus,makeRR,Dukeopoly/Spaces/dukeopoly_westCampus
+space16=Duke Forest,makeCP,Dukeopoly/Spaces/dukeopoly_dukeForest
+space17=Campus Mail,makeCardSpace,Dukeopoly/Spaces/dukeopoly_mail
+space18=Marketplace,makeCP,Dukeopoly/Spaces/dukeopoly_marketplace
+space19=Biddle Music Building,makeCP,Dukeopoly/Spaces/dukeopoly_biddleMusicBuilding
 
-space20=Spring Break,MON,Dukeopoly/Spaces/dukeopoly_springBreak
+space20=Spring Break,makeMoney,Dukeopoly/Spaces/dukeopoly_springBreak
 
-space21=Gross Hall,CP,Dukeopoly/Spaces/dukeopoly_grossHall
-space22=Contingency,CH,Dukeopoly/Spaces/dukeopoly_contingecy
-space23=Fuqua Business School,CP,Dukeopoly/Spaces/dukeopoly_fuqua
-space24=Law School,CP,Dukeopoly/Spaces/dukeopoly_lawSchool
+space21=Gross Hall,makeCP,Dukeopoly/Spaces/dukeopoly_grossHall
+space22=Contingency,makeCardSpace,Dukeopoly/Spaces/dukeopoly_contingecy
+space23=Fuqua Business School,makeCP,Dukeopoly/Spaces/dukeopoly_fuqua
+space24=Law School,makeCP,Dukeopoly/Spaces/dukeopoly_lawSchool
 
-space25=Science Drive,RR,Dukeopoly/Spaces/dukeopoly_scienceDrive
+space25=Science Drive,makeRR,Dukeopoly/Spaces/dukeopoly_scienceDrive
 
-space26=Card Gym,CP,Dukeopoly/Spaces/dukeopoly_cardGym
-space27=Wallace Wade,CP,Dukeopoly/Spaces/dukeopoly_wallaceWade
-space28=Fraternity Rush,U,Dukeopoly/Spaces/dukeopoly_fraternityRush
-space29=Cameron Indoor Stadium,CP,Dukeopoly/Spaces/dukeopoly_cameronIndoor
+space26=Card Gym,makeCP,Dukeopoly/Spaces/dukeopoly_cardGym
+space27=Wallace Wade,makeCP,Dukeopoly/Spaces/dukeopoly_wallaceWade
+space28=Fraternity Rush,makeUtility,Dukeopoly/Spaces/dukeopoly_fraternityRush
+space29=Cameron Indoor Stadium,makeCP,Dukeopoly/Spaces/dukeopoly_cameronIndoor
 
-space30=Academic Probation! Go home!,MOV,Dukeopoly/Spaces/dukeopoly_goHome
+space30=Academic Probation! Go home!,makeMoveSpace,Dukeopoly/Spaces/dukeopoly_goHome
 
-space31=Medical Center,CP,Dukeopoly/Spaces/dukeopoly_medicalCenter
-space32=Bryan Center,CP,Dukeopoly/Spaces/dukeopoly_bryanCenter
-space33=Campus Mail,CC,Dukeopoly/Spaces/dukeopoly_mail
-space34=Perkins Library,CP,Dukeopoly/Spaces/dukeopoly_perkinsLibrary
+space31=Medical Center,makeCP,Dukeopoly/Spaces/dukeopoly_medicalCenter
+space32=Bryan Center,makeCP,Dukeopoly/Spaces/dukeopoly_bryanCenter
+space33=Campus Mail,makeCardSpace,Dukeopoly/Spaces/dukeopoly_mail
+space34=Perkins Library,makeCP,Dukeopoly/Spaces/dukeopoly_perkinsLibrary
 
-space35=East Campus,RR,Dukeopoly/Spaces/dukeopoly_eastCampus
+space35=East Campus,makeRR,Dukeopoly/Spaces/dukeopoly_eastCampus
 
-space36=Duke Chapel,CP,Dukeopoly/Spaces/dukeopoly_dukeChapel
-space37=Contingency,CH,Dukeopoly/Spaces/dukeopoly_contingecy
-space38=Parking Ticket,MON,Dukeopoly/Spaces/dukeopoly_parkingTicket
-space39=Allen Building,CP,Dukeopoly/Spaces/dukeopoly_allenBuilding
+space36=Duke Chapel,makeCP,Dukeopoly/Spaces/dukeopoly_dukeChapel
+space37=Contingency,makeCardSpace,Dukeopoly/Spaces/dukeopoly_contingecy
+space38=Parking Ticket,makeMoney,Dukeopoly/Spaces/dukeopoly_parkingTicket
+space39=Allen Building,makeCP,Dukeopoly/Spaces/dukeopoly_allenBuilding
