utilities now show properly.

--- a/data/Vanilla/Spaces/vanilla_ElectricCompany.properties
+++ b/data/Vanilla/Spaces/vanilla_ElectricCompany.properties
@@ -1,4 +1,4 @@
-name=Electric Company,electric-space.png
+name=Electric Company,Vanilla/Space-Photos/electric-space.png
 salePrice=150
 mortgage=75
 rents=4,10
