idk why this is still happening... gonna defer to the view guys

--- a/gamedata/Vanilla/Game1.properties
+++ b/gamedata/Vanilla/Game1.properties
@@ -1,4 +1,4 @@
-player0=ja,car
-player1=asd,dog
+player0=asdf,Vanilla/Pieces/dog
+player1=asdfsd,Vanilla/Pieces/hat
 prop_file=Vanilla/vanilla
 rules_file=Vanilla/vanillaRules
