now finding player pieces... merging into master

--- a/gamedata/Vanilla/Game1.properties
+++ b/gamedata/Vanilla/Game1.properties
@@ -1,4 +1,4 @@
-player0=asdf,Vanilla/Pieces/dog
-player1=asdfsd,Vanilla/Pieces/hat
+player0=asdf,data/Vanilla/Pieces/car
+player1=fdsa,data/Vanilla/Pieces/dog
 prop_file=Vanilla/vanilla
 rules_file=Vanilla/vanillaRules
