a little bit of beatification, probably need to meet with view team to do bulk of heavy work

--- a/gamedata/Vanilla/Game1.properties
+++ b/gamedata/Vanilla/Game1.properties
@@ -1,4 +1,4 @@
-player0=asdf,data/Vanilla/Pieces/car
-player1=fdsa,data/Vanilla/Pieces/dog
+player0=bbb,data/Vanilla/Pieces/car
+player1=aaa,data/Vanilla/Pieces/hat
 prop_file=Vanilla/vanilla
 rules_file=Vanilla/vanillaRules
