implemented data side of new cards structure... files re formatted for mega, need to do the same for vanilla and duke, but talking to will first to see if he needs anything else

--- a/data/Mega/mega.properties
+++ b/data/Mega/mega.properties
@@ -2,3 +2,4 @@ spacesFile=Mega/megaSpaces
 chanceCards=Mega/megaChance
 communityCards=Mega/megaChest
 piecesList=Mega/megaPieces
+perkCards=Mega/megaCards
