--- a/data/Vanilla/vanilla.properties
+++ b/data/Vanilla/vanilla.properties
@@ -1,4 +1,6 @@
 spacesFile=Vanilla/vanillaSpaces
 chanceCards=Vanilla/vanillaChance
 communityCards=Vanilla/vanillaChest
+perkCards=Vanilla/vanillaCards
+
 piecesList=Vanilla/vanillaPieces
