--- a/data/Dukeopoly/dukeopoly.properties
+++ b/data/Dukeopoly/dukeopoly.properties
@@ -2,3 +2,4 @@ spacesFile=Dukeopoly/dukeopolySpaces
 chanceCards=Dukeopoly/dukeopolyContingency
 communityCards=Dukeopoly/dukeopolyMail
 piecesList=Dukeopoly/dukeopolyPieces
+perkCards=Dukeopoly/dukeopolyCards
