--- a/gamedata/Vanilla/Game1.properties
+++ b/gamedata/Vanilla/Game1.properties
@@ -1,4 +1,4 @@
-player0=asd,data/Vanilla/Pieces/car
-player1=fds,data/Vanilla/Pieces/dog
+player0=sadas,data/Vanilla/Pieces/car
+player1=sadasd,data/Vanilla/Pieces/ship
 prop_file=Vanilla/vanilla
 rules_file=Vanilla/vanillaRules
