--- a/data/Dukeopoly/Spaces/dukeopoly_centralCampus.properties
+++ b/data/Dukeopoly/Spaces/dukeopoly_centralCampus.properties
@@ -1,4 +1,4 @@
-name=Central Campus
+name=Central Campus,Dukeopoly/Space-Photos/central-campus.jpg
 salePrice=200
 mortgage=100
 rents=25,50,100,200
