fixed issue with overwritten equals() method in Agent hierarchy. this led to fixing issue with player tokens being duplicated on the view

--- a/gamedata/Vanilla/Game1.properties
+++ b/gamedata/Vanilla/Game1.properties
@@ -1,4 +1,4 @@
-player0=sadas,data/Vanilla/Pieces/car
-player1=sadasd,data/Vanilla/Pieces/ship
+player0=rohan,data/Vanilla/Pieces/car
+player1=ed,data/Vanilla/Pieces/dog
 prop_file=Vanilla/vanilla
 rules_file=Vanilla/vanillaRules
