fixed Dice view to show individual rolls of all dice, fixed some issues with transaction logs involving cards, added lots of console logging for movement regarding doubles - going to jail, rerolling. Made roll button re-enabled if doubles were previously rolled

--- a/gamedata/Vanilla/Game1.properties
+++ b/gamedata/Vanilla/Game1.properties
@@ -1,4 +1,4 @@
-player0=rohan,data/Vanilla/Pieces/car
-player1=ed,data/Vanilla/Pieces/dog
+player0=rohan,data/Vanilla/Pieces/dog
+player1=eddy,data/Vanilla/Pieces/car
 prop_file=Vanilla/vanilla
 rules_file=Vanilla/vanillaRules
